--- a/blog.html
+++ b/blog.html
@@ -11,18 +11,18 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="/./assets/css/normalize.css" rel="stylesheet"><link href="/./assets/css/styles.blog.css" rel="stylesheet"></head>
   <body>
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
-    <div class="l-wrapper">
+    <div class="l-wrapper" style="display:none">
       <header class="l-section l-hero l-hero_blog">
         <div class="l-scroll-parallax-container">
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_1.png" alt=""></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_2.png" alt=""></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_3.png" alt=""></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_4.png" alt=""></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_5.png" alt=""></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_6.png" alt=""></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_7.png" alt=""></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_8.png" alt=""></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_9.png" alt=""></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_1.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_2.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_3.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_4.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_5.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_6.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_7.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_8.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_9.png" alt="" style="display:none;"></div>
           <ul class="l-hero__social">
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
                 <svg class="svg-use">
@@ -50,7 +50,7 @@
                   <path fill="#FFFFFF" d="M40,17.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,20,0,18.881,0,17.5l0,0C0,16.119,1.119,15,2.5,15h35C38.881,15,40,16.119,40,17.5L40,17.5z" id="centerLine"></path>
                   <path fill="#FFFFFF" d="M40,32.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,35,0,33.881,0,32.5l0,0C0,31.119,1.119,30,2.5,30h35C38.881,30,40,31.119,40,32.5L40,32.5z" id="lastLine"></path>
                 </svg></a>
-              <script type="template/text" id="hamburgerTemplate"><a class="c-hamburger-nav__close c-hamburger-nav__close" id="closeOverlay" href="">
+              <script type="template/text" id="hamburgerTemplate"><a class="c-hamburger-nav__close" id="closeOverlay" href="">
                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 40 35" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <path fill="#FFFFFF" d="M40,2.5C40,3.881,38.881,5,37.5,5h-35C1.119,5,0,3.881,0,2.5l0,0C0,1.119,1.119,0,2.5,0h35C38.881,0,40,1.119,40,2.5L40,2.5z" id="firstLine"></path>
                     <path fill="#FFFFFF" d="M40,17.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,20,0,18.881,0,17.5l0,0C0,16.119,1.119,15,2.5,15h35C38.881,15,40,16.119,40,17.5L40,17.5z" id="centerLine"></path>
@@ -62,7 +62,7 @@
                       <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./my_works.html">мои работы</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/my_works.html">мои работы</a>
                     <svg class="svg_dash">
                       <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -74,7 +74,7 @@
                       <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="#">блог</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/blog.html">блог</a>
                     <svg class="svg_dash">
                       <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -86,7 +86,7 @@
                       <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./about.html">обо мне</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/about.html">обо мне</a>
                     <svg class="svg_dash">
                       <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -98,7 +98,7 @@
                       <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
                       </use>
-                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./index.html#login">авторизация</a>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="/login.html">авторизация</a>
                     <svg class="svg_dash">
                       <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
                         <title>dash</title>
@@ -191,10 +191,10 @@
                 <div class="l-container">
                   <div class="l-footer__nav">
                     <ul class="c-nav__list">
-                      <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
-                      <li class="c-nav__item"><a class="c-nav__link" href="#">блог</a></li>
-                      <li class="c-nav__item"><a class="c-nav__link" href="./about.html">обо мне</a></li>
-                      <li class="c-nav__item"><a class="c-nav__link" href="./index.html#login">авторизация</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="/my_works.html">мои работы</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="/blog.html">блог</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="/about.html">обо мне</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="/login.html">авторизация</a></li>
                     </ul>
                   </div>
                   <div class="l-footer__text"><span>Я веб-разработчик из Санкт-Петербурга, и этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.</span></div>
@@ -233,9 +233,9 @@
     <div id="loader-wrapper">
       <div id="loader">
         <svg class="svg_preloader" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="144px" height="144px" viewBox="0 0 144 144">
-          <circle id="bigCircle" opacity="0.4" fill="none" stroke="#FFFFFF" stroke-width="4" stroke-miterlimit="10" cx="72" cy="71.999" r="70"></circle>
-          <circle id="middleCircle" opacity="0.7" fill="none" stroke="#FFFFFF" stroke-width="3.8938" stroke-miterlimit="10" cx="72" cy="72" r="55"></circle>
-          <circle id="smallCircle" fill="none" stroke="#FFFFFF" stroke-width="4" stroke-miterlimit="10" cx="72" cy="72" r="40"></circle>
+          <circle id="bigCircle" opacity="0.4" fill="none" stroke="#FFFFFF" stroke-width="1" stroke-miterlimit="10" cx="72" cy="71.999" r="70"></circle>
+          <circle id="middleCircle" opacity="0.7" fill="none" stroke="#FFFFFF" stroke-width="1.8938" stroke-miterlimit="10" cx="72" cy="72" r="55"></circle>
+          <circle id="smallCircle" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-miterlimit="10" cx="72" cy="72" r="40"></circle>
         </svg>
         <div class="loader__text" id="preloaderText"><span></span></div>
       </div>
