--- a/login.html
+++ b/login.html
@@ -11,27 +11,90 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="/./assets/css/normalize.css" rel="stylesheet"><link href="/./assets/css/styles.login.css" rel="stylesheet"></head>
   <body class="hero">
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
-    <div class="l-wrapper">
+    <div class="l-wrapper" style="display:none">
       <div class="l-parallax__container" id="parallax">
-        <div class="parallax-layer" data-speed="0.01"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_1.png" alt=""></div>
-        <div class="parallax-layer" data-speed="0.02"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_2.png" alt=""></div>
-        <div class="parallax-layer" data-speed="0.03"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_3.png" alt=""></div>
-        <div class="parallax-layer" data-speed="0.04"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_4.png" alt=""></div>
-        <div class="parallax-layer" data-speed="0.05"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_5.png" alt=""></div>
-        <div class="parallax-layer" data-speed="0.06"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_6.png" alt=""></div>
-        <div class="parallax-layer" data-speed="0.07"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_7.png" alt=""></div>
-        <div class="parallax-layer" data-speed="0.08"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_8.png" alt=""></div>
-        <div class="parallax-layer" data-speed="0.09"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_9.png" alt=""></div>
-        <div class="parallax-layer" data-speed="0.1"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_10.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.01"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_1.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.02"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_2.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.03"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_3.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.04"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_4.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.05"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_5.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.06"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_6.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.07"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_7.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.08"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_8.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.09"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_9.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.1"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_10.png" alt="" style="display:none;"></div>
       </div>
-      <div class="l-login__button">
-        <button class="c-button" id="targetLogin"><span class="c-button__text">Авторизоваться</span></button>
+      <div class="l-login__button" id="targetLogin">
+        <button class="c-button" id="butLogin"><span class="c-button__text">Авторизоваться</span></button>
       </div>
       <div class="l-welcome">
         <div class="l-flip-container">
-          <div class="l-face-container"></div>
-          <div class="l-backface-container"></div>
-          <div class="visually-hidden" id="faceBl" type="template/text">
+          <div class="l-face-container">
+            <div class="c-login-form">
+              <div class="c-login-form__header">
+                <svg class="svg_dash">
+                  <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                    <title>dash</title>
+                  </use>
+                </svg>
+                <h3 class="h-title-article">Авторизуйтесь</h3>
+                <svg class="svg_dash">
+                  <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                    <title>dash</title>
+                  </use>
+                </svg>
+              </div>
+              <form class="c-form c-form_h66" action="/login" id="autorization" method="POST" @submit="validateForm" novalidate="true">
+                <div class="c-form__inner c-form__inner_jc-sa">
+                  <div class="c-form__row">
+                    <label class="c-form__item"><span class="c-form__item-logo" :class="{'error': attemptSubmit &amp;&amp; wrongLogin}">
+                        <svg class="svg_login">
+                          <use xlink:href="../../assets/images/sprites/sprite.svg#login">
+                            <title>login</title>
+                          </use>
+                        </svg></span>
+                      <input class="c-form__input" type="text" name="username" autocomplete="username" placeholder="Логин" v-model="login.value" :class="{'error': attemptSubmit &amp;&amp; wrongLogin}" @keyup="mes=''">
+                      <div class="validator-error" v-if="login.error">{{login.error}}</div>
+                      <div class="c-login__mes" v-if="mes">{{mes}}</div>
+                    </label>
+                  </div>
+                  <div class="c-form__row">
+                    <label class="c-form__item"><span class="c-form__item-logo" :class="{'error': attemptSubmit &amp;&amp; wrongPassword}">
+                        <svg class="svg_login">
+                          <use xlink:href="../../assets/images/sprites/sprite.svg#password">
+                            <title>password</title>
+                          </use>
+                        </svg></span>
+                      <input class="c-form__input" type="password" name="password" autocomplete="current-password" placeholder="Пароль" v-model="password.value" :class="{'error': attemptSubmit &amp;&amp; wrongPassword}" @keyup="mes=''">
+                      <div class="validator-error" v-if="password.error">{{password.error}}</div>
+                    </label>
+                  </div>
+                  <div class="c-form__buttons">
+                    <label class="c-form__item">
+                      <input class="c-form__checkbox" type="checkbox" name="capcha" v-model="checkbox.value" :class="{'error': attemptSubmit &amp;&amp; wrongCheckbox}"><span class="c-form__item-title c-form__item-title--checkbox">Я человек</span>
+                    </label><span class="c-form__row-title">Вы точно не робот?</span>
+                    <div class="c-form__row c-form__row_mb0">
+                      <label class="c-form__item">
+                        <input class="c-form__radio" type="radio" name="noBot" value="yes" v-model="radio.value"><span class="c-form__item-title c-form__item-title--radio" :class="{'error': attemptSubmit &amp;&amp; wrongRadio}">Да</span>
+                      </label>
+                      <label class="c-form__item">
+                        <input class="c-form__radio" type="radio" name="noBot" value="none" v-model="radio.value"><span class="c-form__item-title c-form__item-title--radio">Не уверен</span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </form>
+              <ul class="c-form__buts-action">
+                <li class="c-form__nav-item">
+                  <button class="c-form__nav-link" id="targetMain" type="button"><span class="c-button__text">На главную</span></button>
+                </li>
+                <li class="c-form__nav-item">
+                  <button class="c-form__nav-link" type="submit" value="Submit" form="autorization"><span class="c-button__text">Войти</span></button>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="l-backface-container">
             <div class="c-welcome">
               <div class="c-welcome__img-wrap" style="background-image: url('../../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-welcome__img visually-hidden" alt="" src="/assets/images/content/photo.jpg"></div>
               <div class="c-welcome__content">
@@ -65,70 +128,6 @@
               </div>
             </div>
           </div>
-          <div class="visually-hidden" id="backFaceBl" type="template/text">
-            <div class="c-login-form">
-              <div class="c-login-form__header">
-                <svg class="svg_dash">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
-                    <title>dash</title>
-                  </use>
-                </svg>
-                <h3 class="h-title-article">Авторизуйтесь</h3>
-                <svg class="svg_dash">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
-                    <title>dash</title>
-                  </use>
-                </svg>
-              </div>
-              <form class="c-form" action="./server_test.php" id="login-form" method="POST" @submit="validateForm" novalidate="true">
-                <div class="c-form__inner">
-                  <div class="c-form__row">
-                    <label class="c-form__item"><span class="c-form__item-logo" :class="{'error': attemptSubmit &amp;&amp; wrongLogin}">
-                        <svg class="svg_login">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#login">
-                            <title>login</title>
-                          </use>
-                        </svg></span>
-                      <input class="c-form__input" type="text" name="username" autocomplete="username" placeholder="Логин" v-model="login.value" :class="{'error': attemptSubmit &amp;&amp; wrongLogin}">
-                      <div class="validator-error" v-if="login.error">{{login.error}}</div>
-                    </label>
-                  </div>
-                  <div class="c-form__row">
-                    <label class="c-form__item"><span class="c-form__item-logo" :class="{'error': attemptSubmit &amp;&amp; wrongPassword}">
-                        <svg class="svg_login">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#password">
-                            <title>password</title>
-                          </use>
-                        </svg></span>
-                      <input class="c-form__input" type="password" name="password" autocomplete="current-password" placeholder="Пароль" v-model="password.value" :class="{'error': attemptSubmit &amp;&amp; wrongPassword}">
-                      <div class="validator-error" v-if="password.error">{{password.error}}</div>
-                    </label>
-                  </div>
-                  <div class="c-form__buttons">
-                    <label class="c-form__item">
-                      <input class="c-form__checkbox" type="checkbox" name="capcha" v-model="checkbox.value" :class="{'error': attemptSubmit &amp;&amp; wrongCheckbox}"><span class="c-form__item-title c-form__item-title--checkbox">Я человек</span>
-                    </label><span class="c-form__row-title">Вы точно не робот?</span>
-                    <div class="c-form__row">
-                      <label class="c-form__item">
-                        <input class="c-form__radio" type="radio" name="noBot" value="yes" v-model="radio.value"><span class="c-form__item-title c-form__item-title--radio" :class="{'error': attemptSubmit &amp;&amp; wrongRadio}">Да</span>
-                      </label>
-                      <label class="c-form__item">
-                        <input class="c-form__radio" type="radio" name="noBot" value="none" v-model="radio.value"><span class="c-form__item-title c-form__item-title--radio">Не уверен</span>
-                      </label>
-                    </div>
-                  </div>
-                  <ul class="c-form__buts-action">
-                    <li class="c-form__nav-item">
-                      <button class="c-form__nav-link" id="targetMain" type="button"><span class="c-button__text">На главную</span></button>
-                    </li>
-                    <li class="c-form__nav-item">
-                      <button class="c-form__nav-link" type="submit" value="Submit"><span class="c-button__text">Войти</span></button>
-                    </li>
-                  </ul>
-                </div>
-              </form>
-            </div>
-          </div>
         </div>
       </div>
       <footer class="l-copy">
@@ -142,9 +141,9 @@
     <div id="loader-wrapper">
       <div id="loader">
         <svg class="svg_preloader" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="144px" height="144px" viewBox="0 0 144 144">
-          <circle id="bigCircle" opacity="0.4" fill="none" stroke="#FFFFFF" stroke-width="4" stroke-miterlimit="10" cx="72" cy="71.999" r="70"></circle>
-          <circle id="middleCircle" opacity="0.7" fill="none" stroke="#FFFFFF" stroke-width="3.8938" stroke-miterlimit="10" cx="72" cy="72" r="55"></circle>
-          <circle id="smallCircle" fill="none" stroke="#FFFFFF" stroke-width="4" stroke-miterlimit="10" cx="72" cy="72" r="40"></circle>
+          <circle id="bigCircle" opacity="0.4" fill="none" stroke="#FFFFFF" stroke-width="1" stroke-miterlimit="10" cx="72" cy="71.999" r="70"></circle>
+          <circle id="middleCircle" opacity="0.7" fill="none" stroke="#FFFFFF" stroke-width="1.8938" stroke-miterlimit="10" cx="72" cy="72" r="55"></circle>
+          <circle id="smallCircle" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-miterlimit="10" cx="72" cy="72" r="40"></circle>
         </svg>
         <div class="loader__text" id="preloaderText"><span></span></div>
       </div>
