--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
         <div class="l-flip-container">
           <div class="l-face-container">
             <div class="c-welcome">
-              <div class="c-welcome__img-wrap" style="background-image: url('../../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-welcome__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
+              <div class="c-welcome__img-wrap" style="background-image: url(`./assets/images/content/photo.jpg`); background-repeat:no-repeat;"><img class="c-welcome__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
               <div class="c-welcome__content">
                 <h1 class="c-welcome__header">Yuliya Volkova</h1>
                 <h2 class="c-welcome__desc">Личный сайт WEB Разработчика</h2>
                 <ul class="c-welcome__social">
                   <li class="c-welcome__social-item"><a class="c-welcome__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
                       <svg class="svg-use">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#vk">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#vk">
                           <title>vk</title>
                         </use>
                       </svg></a></li>
                   <li class="c-welcome__social-item"><a class="c-welcome__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                       <svg class="svg-use">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#github">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#github">
                           <title>github</title>
                         </use>
                       </svg></a></li>
                   <li class="c-welcome__social-item"><a class="c-welcome__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
                       <svg class="svg-use">
-                        <use xlink:href="../../assets/images/sprites/sprite.svg#in">
+                        <use xlink:href="./assets/images/sprites/sprite.svg#in">
                           <title>in</title>
                         </use>
                       </svg></a></li>
@@ -67,13 +67,13 @@
             <div class="c-login-form">
               <div class="c-login-form__header">
                 <svg class="svg_dash">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                     <title>dash</title>
                   </use>
                 </svg>
                 <h3 class="h-title-article">Авторизуйтесь</h3>
                 <svg class="svg_dash">
-                  <use xlink:href="../../assets/images/sprites/sprite.svg#dash">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                     <title>dash</title>
                   </use>
                 </svg>
@@ -83,7 +83,7 @@
                   <div class="c-form__row">
                     <label class="c-form__item"><span class="c-form__item-logo" :class="{'error': attemptSubmit &amp;&amp; wrongLogin}">
                         <svg class="svg_login">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#login">
+                          <use xlink:href=".assets/images/sprites/sprite.svg#login">
                             <title>login</title>
                           </use>
                         </svg></span>
@@ -95,7 +95,7 @@
                   <div class="c-form__row">
                     <label class="c-form__item"><span class="c-form__item-logo" :class="{'error': attemptSubmit &amp;&amp; wrongPassword}">
                         <svg class="svg_login">
-                          <use xlink:href="../../assets/images/sprites/sprite.svg#password">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#password">
                             <title>password</title>
                           </use>
                         </svg></span>
